# crypto-hft

./: .gitignore  CMakeLists.txt  README.md
build_runtime/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  test_storage[1]_include.cmake  test_strategy_runtime[1]_include.cmake
build_runtime2/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  test_storage[1]_include.cmake  test_strategy_runtime[1]_include.cmake
build_storage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_70c1fe177a.json  cmake_test_discovery_8e6cfb1f17.json  cmake_test_discovery_a8f3a2d148.json  cmake_test_discovery_a97241666a.json  cmake_test_discovery_b69e4dc52c.json  cmake_test_discovery_d9d218ecb6.json  compile_commands.json  hft_platform  test_backtest  test_backtest[1]_include.cmake  test_backtest[1]_tests.cmake  test_exchange_api  test_exchange_api[1]_include.cmake  test_exchange_api[1]_tests.cmake  test_ipc  test_ipc[1]_include.cmake  test_ipc[1]_tests.cmake  test_orderbook_risk  test_orderbook_risk[1]_include.cmake  test_orderbook_risk[1]_tests.cmake  test_storage  test_storage[1]_include.cmake  test_storage[1]_tests.cmake  test_strategy_runtime  test_strategy_runtime[1]_include.cmake  test_strategy_runtime[1]_tests.cmake
build_storage/Testing/Temporary/: CTestCostData.txt
docs/: PROJECT_OVERVIEW.md  STORAGE_INTERFACES_V1.md
include/backtest/: backtest_replay_driver.hpp  simulated_execution_sink.hpp
include/core/: order_executor.hpp  trade_queue.hpp
include/exchange/: auth_handler.hpp  crypto_com_api.hpp  market_data_client.hpp  websocket_client.hpp
include/ipc/: client_protocol.hpp  unix_domain_server.hpp
include/orderbook/: order_book.hpp
include/risk/: risk_manager.hpp
include/storage/: in_memory_storage.hpp  jsonl_async_storage.hpp  storage_interface.hpp  storage_types.hpp
include/strategy/: example_strategies.hpp  execution_sink.hpp  live_order_executor_sink.hpp  storage_replay_driver.hpp  strategy_base.hpp
include/types/: trade.hpp
python/: hft_client.py
src/: main.cpp
src/exchange/: market_data_client.cpp
src/storage/: in_memory_storage.cpp  jsonl_async_storage.cpp  storage_types.cpp
tests/: bench_hot_path.cpp  test_backtest.cpp  test_exchange_api.cpp  test_ipc.cpp  test_orderbook_risk.cpp  test_storage.cpp  test_strategy_runtime.cpp
